test/functions/iterators/bradc/badzip/arrayZipMismatch.good
arrayZipMismatch.chpl:3: error: zippering iterators of incompatible size
